# rust_wgpu

./: Cargo.toml
src/: main.rs
src/game/: game.rs  mod.rs  particle.rs
src/graphics/: bind_group.rs  bind_group_layout.rs  buffer.rs  camera.rs  context.rs  core.rs  entity.rs  geometry.rs  gpu_resource.rs  handler.rs  init_state.rs  layout_handler.rs  m_buffer_handler.rs  material.rs  mesh.rs  mesh_buffer.rs  mod.rs  pipeline.rs  presets.rs  r_pipeline_handler.rs  registry.rs  render_pipeline.rs  renderer.rs  shape_factory.rs  state.rs  texture.rs  tracker.rs  traits.rs  transform.rs  transient.rs  u_buffer_handler.rs  uniform.rs  uniform_buffer.rs  vertex.rs  wpgu_context.rs
src/graphics/shaders/: colored_sprite.wgsl  colored_sprite_instanced.wgsl  shader.wgsl  textured_sprite.wgsl  textured_sprite_instanced.wgsl
