[package]
name = "wgpu-proj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
glam = { version = "0.32.1", features = [ "bytemuck" ]}
image = "0.23"
rand = "0.8.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }